css/style.css
.container {
  background-color: white;
  border-bottom: 2px solid #D8DAD3;
  height: 56px;
}

#breakHeight {
  height: 100px;
}

#border {
  border-bottom: 2px solid #D8DAD3;
}

#blueHighlight {
  border-bottom: 2px solid #0073CF;
  background: rgba(0, 115, 207, .12)
}

.card-overlay {
  background: rgba(95, 95, 95, 0.5);
}

/* Bottom navigation icons */
.navIcon {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 70%;
}

/* Green progress bar */
hr {
  border: 3px solid #7CEA9C;
  width: 60px;
  float: right;
}

/* Gray progress bar */
hr.Empty {
  border: 3px solid #D8DAD3;
  width: 60px;
  float: right;
}

#Course_Area {
  padding-top: 20px;
}

/* Fonts */

h4 {
  font-family: 'Source Sans Pro';
  font-size: 20px;
  font-weight: bold;
  color: #011638;
}

h5 {
  font-family: 'Alegreya';
  font-size: 22px;
  color: #011638;
}

p{
  font-family: 'Source Sans Pro';
  font-size: 16px;
  color: #011638;
}

figure {
  margin: auto;
  font-family: 'Source Sans Pro';
  color: #959595;
  font-size: 16px;
}

#blueText {
  color: #011638;
  width: 70%;
}

/* Images */
#Mermaid {
float: left;
margin-top: 8px;
}


#Heart {
  float: right;
  margin-top: 18px;

}

/* Icons */

#chevron {
  margin-top: 30px;
  margin-left: 15px;
}

.fa-chevron-down {
  float:right;
  padding-top: 2px;
}


/* The 5 next to the Heart */
#Lives {
  float:right;
  margin-top:15px;
  padding-left: 5px;
}

.time {
  opacity: 0.5;
}

/* Centered gray line */
.vl {
  border-left: 2px solid #D8DAD3;
  height: 1750px;
  position: absolute;
  left: 50%;
  margin-left: -3px;
  top: 400px;
}

/* Centered Courses cards */
.card {
        margin: 0 auto; /* Added */
        float: none; /* Added */
        margin-bottom: 10px; /* Added */
}

